# libmsgbuff

./: .gitignore  Makefile.am  README.md  configure.ac  msgbuff.c  msgbuff.h
debian/: README  changelog  control  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  libmsgbuff-dev.install  libmsgbuff.default.ex  libmsgbuff.doc-base.EX  libmsgbuff0.copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
